# sds-poc-etl

./: .env.example  CLAUDE.md  README.md  pyproject.toml
migrations/: 001_create_eu_caps_weather_logs.sql
src/eu_weather_etl/: __init__.py  capitals.py  config.py  db.py  extract.py  load.py  main.py  migrate.py  transform.py
