[project]
name = "eu-weather-etl"
version = "0.1.0"
description = "ETL that snapshots current weather for all European capitals into PostgreSQL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
]

[project.scripts]
eu-weather-etl = "eu_weather_etl.main:main"
eu-weather-migrate = "eu_weather_etl.migrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eu_weather_etl"]
